--- a/yourThing/yourThing/Base.lproj/Main.storyboard
+++ b/yourThing/yourThing/Base.lproj/Main.storyboard
@@ -206,16 +206,16 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SxZ-4d-NCF">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkN-sZ-iFp">
-                                        <rect key="frame" x="50" y="35" width="317" height="514"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLR-s4-3yl">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="57"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLR-s4-3yl">
-                                        <rect key="frame" x="8" y="8" width="317" height="57"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkN-sZ-iFp">
+                                        <rect key="frame" x="0.0" y="69" width="375" height="485"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -411,33 +411,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Q9-Z8-CEH">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCS-FK-Qg5">
-                                        <rect key="frame" x="-39" y="35" width="317" height="57"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kM6-Mj-JeD">
-                                        <rect key="frame" x="-39" y="-193" width="317" height="514"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </scrollView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCS-FK-Qg5">
+                                <rect key="frame" x="0.0" y="64" width="375" height="65"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kM6-Mj-JeD">
+                                <rect key="frame" x="0.0" y="133" width="375" height="485"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="5Q9-Z8-CEH" firstAttribute="bottom" secondItem="sqy-kV-Cbb" secondAttribute="bottom" id="4U7-3O-hTU"/>
-                            <constraint firstItem="5Q9-Z8-CEH" firstAttribute="top" secondItem="sqy-kV-Cbb" secondAttribute="top" id="QW4-UB-mGD"/>
-                            <constraint firstItem="5Q9-Z8-CEH" firstAttribute="leading" secondItem="sqy-kV-Cbb" secondAttribute="leading" id="VoN-Ih-PdL"/>
-                            <constraint firstItem="5Q9-Z8-CEH" firstAttribute="trailing" secondItem="sqy-kV-Cbb" secondAttribute="trailing" id="qAg-yY-ksg"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="sqy-kV-Cbb"/>
                     </view>
                     <connections>
@@ -456,35 +445,9 @@
                     <view key="view" contentMode="scaleToFill" id="EoZ-tO-IP1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PF6-iw-2dp">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQY-tT-7vK">
-                                        <rect key="frame" x="0.0" y="89" width="375" height="465"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eut-yB-cWM">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </scrollView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Ywg-2e-OuG"/>
                     </view>
-                    <connections>
-                        <outlet property="content3" destination="eQY-tT-7vK" id="cD1-kW-3ss"/>
-                        <outlet property="title3" destination="eut-yB-cWM" id="E0U-Hl-gAC"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="00b-Gr-sjg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -497,49 +460,9 @@
                     <view key="view" contentMode="scaleToFill" id="DPd-Dh-GbD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b2f-qw-aby">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXZ-Fz-0jh">
-                                        <rect key="frame" x="0.0" y="0.0" width="52.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhg-fz-PRI">
-                                        <rect key="frame" x="0.0" y="100" width="375" height="446"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="TXZ-Fz-0jh" firstAttribute="top" secondItem="b2f-qw-aby" secondAttribute="top" id="CU1-EM-xbF"/>
-                                    <constraint firstItem="TXZ-Fz-0jh" firstAttribute="leading" secondItem="b2f-qw-aby" secondAttribute="leading" id="M0U-3F-z6S"/>
-                                    <constraint firstAttribute="trailing" secondItem="hhg-fz-PRI" secondAttribute="trailing" id="aNs-Xg-DYY"/>
-                                    <constraint firstAttribute="bottom" secondItem="hhg-fz-PRI" secondAttribute="bottom" id="bM7-xI-09a"/>
-                                    <constraint firstItem="hhg-fz-PRI" firstAttribute="leading" secondItem="b2f-qw-aby" secondAttribute="leading" id="ep7-ew-Jul"/>
-                                    <constraint firstItem="TXZ-Fz-0jh" firstAttribute="top" secondItem="b2f-qw-aby" secondAttribute="top" id="oAx-II-0hc"/>
-                                    <constraint firstAttribute="trailing" secondItem="TXZ-Fz-0jh" secondAttribute="trailing" id="pn4-YP-kJa"/>
-                                    <constraint firstItem="TXZ-Fz-0jh" firstAttribute="leading" secondItem="b2f-qw-aby" secondAttribute="leading" id="ubD-fW-4yH"/>
-                                    <constraint firstAttribute="trailing" secondItem="TXZ-Fz-0jh" secondAttribute="trailing" id="y3z-7m-gnl"/>
-                                </constraints>
-                            </scrollView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="b2f-qw-aby" firstAttribute="leading" secondItem="6IJ-Gj-MTw" secondAttribute="leading" id="4ah-o6-beP"/>
-                            <constraint firstItem="b2f-qw-aby" firstAttribute="bottom" secondItem="6IJ-Gj-MTw" secondAttribute="bottom" id="6zd-hi-Do6"/>
-                            <constraint firstItem="b2f-qw-aby" firstAttribute="top" secondItem="6IJ-Gj-MTw" secondAttribute="top" id="aqa-PH-QPL"/>
-                            <constraint firstItem="b2f-qw-aby" firstAttribute="trailing" secondItem="6IJ-Gj-MTw" secondAttribute="trailing" id="z9d-nP-5yG"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6IJ-Gj-MTw"/>
                     </view>
-                    <connections>
-                        <outlet property="content4" destination="hhg-fz-PRI" id="bIv-kH-l3p"/>
-                        <outlet property="title4" destination="TXZ-Fz-0jh" id="TEe-2T-Sn7"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n0w-Rs-mmy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
